--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@ html {
   font-size: 20px;
   font-weight: 200;
 }
+
+body {
+  margin: 0;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
